--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,74 +1,32 @@
-name: snake
+name: Generate snake game
 
-on: [push]
+on:
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+  workflow_dispatch:
+
+  push:
+    branches:
+    - main
+
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          cache: yarn
-          node-version: 20
-      - run: yarn install --frozen-lockfile
-
-      - run: npm run type
-      - run: npm run lint
-      - run: npm run test --ci
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN3D }}
-
-  test-action:
+  build:
+    name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - name: generate-snake-game-from-github-contribution-grid
-        id: generate-snake
-        uses: ./
+      # Snake Animation
+      - uses: Sutil/snk@master
+        id: snake-gif
         with:
-          github_user_name: peregrinno
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-contribution-grid-snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+          github_user_name: ${{ github.repository_owner }}
+          svg_out_path: dist/github-contribution-grid-snake2.svg
+          snake_color: 'blue'
 
-  test-action-svg-only:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          cache: yarn
-          node-version: 20
-      - run: yarn install --frozen-lockfile
-
-      - name: build svg-only action
-        run: |
-          npm run build:action
-          rm -r svg-only/dist
-          mv packages/action/dist svg-only/dist
-
-      - name: generate-snake-game-from-github-contribution-grid
-        id: generate-snake
-        uses: ./svg-only
-        with:
-          github_user_name: peregrinno
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-
-      - name: ensure the generated file exists
-        run: |
-          ls dist
-          test -f dist/github-contribution-grid-snake.svg
-          test -f dist/github-contribution-grid-snake-dark.svg
-
-      - uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output-svg-only
+          target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN3D }}
+  
